--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   fluttertoast: ^8.2.4
   flutter_styled_toast: ^2.2.1
   intl: ^0.18.1
+  http: ^1.2.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
